--- a/liuyanban.html
+++ b/liuyanban.html
@@ -28,7 +28,7 @@ body table tr td table tr td {
         <td width="160" bgcolor="#0A9E6A"><a href="fzls.html">发展历史</a></td>
         <td width="175" bgcolor="#0A9E6A"><a href="jbxx.html">基本信息</a></td>
         <td width="185" bgcolor="#0A9E6A"><a href="tuku.html">图库</a></td>
-        <td width="157" bgcolor="#0A9E6A"><a href="liuyanban.html">留言板</a></td>
+        <td width="157" bgcolor="#0A9E6A"><a href="liuyanban.html"></a></td>
         <td width="171" bgcolor="#0A9E6A">&nbsp;</td>
       </tr>
     </table></td>
